--- a/formalism.tex
+++ b/formalism.tex
@@ -263,8 +263,12 @@ For some context $\xi\vlhole$, a \emph{calculus of structures inference step, ge
 \end{definition}
 
 \begin{theorem}
-The functorial calculus p-simulates the calculus of structures and the calculus of structures p-simulates the functorial calculus.
+A calculus of structures derivation can be transformed into a functorial calculus derivation in polynomial time.
 \end{theorem}
+
+\begin{proof}
+Given a calculus of structures inference step $\vlinf{\rho}{}{\xi\{\beta\}}{\{\alpha\}}$ we can construct a functorial calculus derivation $\xi\left\{\vlinf{\rho}{}{\beta}{\alpha}\right\}$ by structural induction on $\xi\vlhole$.
+\end{proof}
 
 \begin{theorem}
 A functorial calculus derivation corresponds to an equivalence class of calculus of structures derivations modulo bureaucracy of type A.
