Removed non-UTF-8 character

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -408,7 +408,7 @@ By studying Definitions~\vref{definition:FlowCore} and \vref{definition:aiDecomp
 \TODO{In what sense is this unique?}
 
 \begin{definition}\label{definition:DerTheCore}
-Given a derivation $\Phi$, the core of $\Phi$ obtained as described in the proof of Theorem~\v¤ref{theorem:DerCore} is called \emph{the core of\/ $\Phi$}, denoted $\Core(\Phi)$.
+Given a derivation $\Phi$, the core of $\Phi$ obtained as described in the proof of Theorem~\vref{theorem:DerCore} is called \emph{the core of\/ $\Phi$}, denoted $\Core(\Phi)$.
 \end{definition}
 
 
