--- a/formalism.tex
+++ b/formalism.tex
@@ -2,18 +2,15 @@
 
 \section{Definitions}\label{section:FunctorialCalculus}
 
-\TODO{Give credit to Francois}
-
-\newcommand{\fff}{\mathsf f}
-\newcommand{\ttt}{\mathsf t}
-\newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
-
+\TODO{Give credit to Francois for the name.}
 
 \TODO{Definitions~\vrefrange{definition:Formula}{definition:InferenceRuleInstance} and Definition~\vref{definition:CoS} is taken from \emph{On the Proof Complexity of Deep Inference}.}
 
 \TODO{Note: Removed negated formula variables; DeMorgan dual of formulae; formula variables from the examples.} 
 
-\TODO{Check again the definition of size of a context against the paper.}
+\newcommand{\fff}{\mathsf f}
+\newcommand{\ttt}{\mathsf t}
+\newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
 
 \begin{definition}\label{definition:Formula}
 \emph{Formulae} of the \emph{functorial calculus} are denoted by $\alpha$, $\beta$, $\gamma$, $\delta$ and are freely built from:
