--- a/formalism.tex
+++ b/formalism.tex
@@ -20,7 +20,7 @@
  \item \emph{formula variables} $A$, $B$, $C$, $D$, and
  \item \emph{logical relations}, like \emph{disjunction} $\vlsbr[\alpha.\beta]$ and \emph{conjunction} $\vlsbr(\alpha.\beta)$.
 \end{itemize}
-A formula is \emph{ground} if it contains no variables. We usually omit external brackets of formulae, and sometimes we omit dispensable brackets under associativity. We use $\equiv$ to denote literal equality of formulae. The \emph{size} $\size\alpha$ of a formula $\alpha$ is the number of unit, atom and variable occurrences appearing in it. On the set of atoms there is an involution $\bar\cdot$, called \emph{negation} (\emph{i.e.}, $\bar\cdot$ is a bijection from the set of atoms to itself such that $\bar{\bar a}\equiv a$); we require that $\bar a\not\equiv a$ for every $a$; when both $a$ and $\bar a$ appear in a formula, we mean that atom $a$ is mapped to by $\bar a$ by $\bar\cdot$. A \emph{context} is a formula where one \emph{hole} $\vlhole$ appears in the place of a subformula; for example, $\vls[a.(b.\vlhole)]$ is a context; the generic context is denoted by $\xi\vlhole$. The hole can be filled with formulae; for example, if $\xi\vlhole\equiv\vls(b.[\vlhole.c])$, then $\xi\{a\}\equiv\vls(b.[a.c])$, $\xi\{b\}\equiv\vls(b.[b.c])$ and $\xi\{\vls(a.b)\}\equiv\vls(b.[(a.b).c])$. The size of a context is defined to be $\size{\xi\vlhole}=\size{\xi\{a\}}-1$.
+A formula is \emph{ground} if it contains no variables. We usually omit external brackets of formulae, and sometimes we omit dispensable brackets under associativity. We use $\equiv$ to denote literal equality of formulae. The \emph{size} $\size\alpha$ of a formula $\alpha$ is the number of unit, atom and variable occurrences appearing in it. On the set of atoms there is an involution $\bar\cdot$, called \emph{negation} (\emph{i.e.}, $\bar\cdot$ is a bijection from the set of atoms to itself such that $\bar{\bar a}\equiv a$); we require that $\bar a\not\equiv a$ for every $a$; when both $a$ and $\bar a$ appear in a formula, we mean that atom $a$ is mapped to by $\bar a$ by $\bar\cdot$. A \emph{context} is a formula where one \emph{hole} $\vlhole$ appears in the place of a subformula; for example, $\vls[a.(b.\vlhole)]$ is a context; the generic context is denoted by $\xi\vlhole$. The hole can be filled with formulae; for example, if $\xi\vlhole\equiv\vls(b.[\vlhole.c])$, then $\xi\{a\}\equiv\vls(b.[a.c])$, $\xi\{b\}\equiv\vls(b.[b.c])$ and $\xi\{\vls(a.b)\}\equiv\vls(b.[(a.b).c])$. The \emph{size} of $\xi\vlhole$ is defined as $\size{\xi\vlhole}=\size{\xi\{a\}}-1$.
 \end{definition}
 
 \TODO{Note: I removed mention of $\rho$ and $\sigma$ as well as DeMorgan duals. I changed the example.}
@@ -30,48 +30,58 @@ A \emph{renaming} is a map from the set of atoms to itself, and it is denoted by
 \end{definition}
 
 \begin{definition}\label{definition:InferenceRuleInstance}
-An \emph{inference rule} $\rho$ is an expression $\vlinf{\rho}{}{\beta}{\alpha}$, where formulae $\alpha$ and $\beta$ are called \emph{premiss} and \emph{conclusion}, respectively. An \emph{inference rule instance} $\vlinf{\rho}{}{\delta}{\gamma}$ of $\vlinf{\rho}{}{\beta}{\alpha}$ is such that $\gamma\equiv\alpha\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$ and $\delta\equiv\beta\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$, for some renaming $\{a_1/b_1,a_2/b_2,\dots\}$ and substiution $\{A_1/\beta_1,A_2/\beta_2,\dots\}$.
+An \emph{inference rule} $\rho$ is an expression $\vlinf{\rho}{}{\beta}{\alpha}$, where formulae $\alpha$ and $\beta$ are called \emph{premiss} and \emph{conclusion}, respectively. A \emph{proof system} is a finite set of inference rules. An \emph{inference rule instance} $\vlinf{\rho}{}{\delta}{\gamma}$ of $\vlinf{\rho}{}{\beta}{\alpha}$ is such that $\gamma\equiv\alpha\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$ and $\delta\equiv\beta\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$, for some renaming $\{a_1/b_1,a_2/b_2,\dots\}$ and substiution $\{A_1/\beta_1,A_2/\beta_2,\dots\}$.
 \end{definition}
 
-\TODO{Define size of derivation}
-
 \begin{definition}\label{definition:Derivation}
-Fix a set of formulae, a set of inference rule instances and a set of logical connectives, then a \emph{(functorial calculus) derivation $\vlder{\Psi}{}{\beta}{\alpha}$ from (the formula) $\alpha$ to (the formula) $\beta$}, is defined to be
+Given a set of formulae built from the logical relations $\mathcal{R}$, and a proof system $\mathcal{S}$, then a (\emph{functorial calculus}) \emph{derivation $\vlder{\Psi}{\mathcal{S}}{\beta}{\alpha}$ from the formula $\alpha$ to the formula $\beta$}, is defined to be
 \begin{enumerate}
- \item\label{definition:Derivation:item:Formula} a formula: $\Psi=\alpha\equiv\beta$;
+ \item\label{definition:Derivation:item:Formula} a formula: $\alpha\equiv\beta$;
 
  \item\label{definition:Derivation:item:Vertical} the result of a vertical composition:
  \[
- \Psi\;=\;
- \vlinf{\rho}{}
+ \vlderivation
  {
-  \vlder{\Phi_2}{}
+  \vlde{\Phi_2}{}
   {
-   \beta_2
+   \beta
   }
   {
-   \alpha_2
-  }
- }
- {
-  \vlder{\Phi_1}{}
-  {
-   \beta_1
-  }
-  {
-   \alpha_1
+   \vlin{\rho}{}
+   {
+    \alpha'
+   }
+   {
+    \vlde{\Phi_1}{}
+    {
+     \beta'
+    }
+    {
+     \vlhy
+     {
+      \alpha
+     }
+    }
+   }
   }
  }
  \quad,
  \]
- where $\vlinf{\rho}{}{\alpha_2}{\beta_1}$ is an inference rule instance, and $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$ and $\vlder{\Phi_2}{}{\beta_2}{\alpha_1}$ are derivations; we define $\size{\Psi}$ to be $\size{\Phi_1}+\size{\Phi_2}$; and
+ where $\vlinf{\rho}{}{\alpha'}{\beta'}$ is an instance of an inference rule from $\mathcal{S}$, and $\vlder{\Phi_1}{}{\beta'}{\alpha}$ and $\vlder{\Phi_2}{}{\beta}{\alpha'}$ are derivations; or
 
  \item\label{definition:Derivation:item:Horizontal} the result of a horizontal composition:
  \[
- \Psi=\vlder{\circ(\Phi_1,\dots,\Phi_n)}{}{\circ(\beta_1,\dots,\beta_n)}{\circ(\alpha_1,\dots,\alpha_n)}\quad,
+ \circ
+ \left(
+  \vlder{\Phi_1}{}{\beta_1}{\alpha_1}
+  \;,\;\cdots\;,\;
+  \vlder{\Phi_n}{}{\beta_n}{\alpha_n}
+ \right)
+ \quad,
  \]
- where $\circ$ is an $n$-ary logical relation, $\alpha\equiv\circ(\alpha_1,\dots,\alpha_n)$, $\beta\equiv\circ(\beta_1,\dots,\beta_n)$, and $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$, $\dots$, $\vlder{\Phi_n}{}{\beta_n}{\alpha_n}$ are derivations; we define $\size{\Psi}$ to be $\size{\Phi_1}+\cdots+\size{\Phi_n}$.
+ where $\circ$ is an $n$-ary logical relation from $\mathcal{R}$, $\alpha\equiv\circ(\alpha_1,\dots,\alpha_n)$, $\beta\equiv\circ(\beta_1,\dots,\beta_n)$, and $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$, $\dots$, $\vlder{\Phi_n}{}{\beta_n}{\alpha_n}$ are derivations.
 \end{enumerate}
+The size of a derivation $\Psi$, denoted $\size{\Psi}$, is defined to be the sum of the size of the formulae occurring in $\Psi$.
 \end{definition}
 
 \begin{remark}\label{remark:DerAssociativeComposition}
@@ -197,9 +207,9 @@ Given a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and a context $\xi\vlhole$, a
 We proceed by structural induction on $\xi\vlhole$. The base case, $\xi\vlhole\equiv\vlhole$, is trivial.
 For the inductive case, let
 \[
- \xi\vlhole\equiv\circ(\alpha_1,\dots,\alpha_{i-1},\xi'\vlhole,\alpha_{i+1},\dots,\alpha_n)
+ \xi\vlhole\equiv\circ(\gamma_1,\dots,\gamma_{i-1},\xi'\vlhole,\gamma_{i+1},\dots,\gamma_n)
 \]
-for some $n$-ary logical relation $\circ$, some formulae $\alpha_1$, $\dots$, $\alpha_n$ and a context $\xi'\vlhole$. By the inductive hypothesis we can construct the derivation $\xi'\{\Phi\}$, so the result follows by item \ref{definition:Derivation:item:Horizontal} of Definition~\vref{definition:Derivation}.
+for some $n$-ary logical relation $\circ$, some formulae $\gamma_1$, $\dots$, $\gamma_{i-1}$, $\gamma_{i+1}$, $\dots$, $\gamma_n$ and a context $\xi'\vlhole$. By the inductive hypothesis we can construct the derivation $\xi'\{\Phi\}$, so the result follows by item \ref{definition:Derivation:item:Horizontal} of Definition~\vref{definition:Derivation}.
 \end{proof}
 
 
@@ -218,24 +228,120 @@ We argue by structural induction on $\Phi_1$ and $\Phi_2$
  \item if
   \[
    \Phi_1\;=\;
-   \vlinf{\rho}{}{\vlder{\Phi''_1}{}{\beta}{\alpha'}}{\vlder{\Phi'_1}{}{\beta'}{\alpha}}\quad,
+   \vlderivation
+   {
+    \vlde{\Phi''_1}{}
+    {
+     \beta
+    }
+    {
+     \vlin{\rho}{}
+     {
+      \alpha'
+     }
+     {
+      \vlde{\Phi'_1}{}
+      {
+       \beta'
+      }
+      {
+       \vlhy
+       {
+        \alpha
+       }
+      }
+     }
+    }
+   }\quad,
   \]
   then, by the inductive hypothesis, we can construct $\vlder{\Psi'}{}{\gamma}{\alpha'}$, with size $\size{\Phi''_1}+\size{\Phi_2}-\size{\beta}$, we can then build
   \[
    \Psi\;=\;
-   \vlinf{\rho}{}{\vlder{\Psi'}{}{\gamma}{\alpha'}}{\vlder{\Phi'_1}{}{\beta'}{\alpha}}\quad,
+   \vlderivation
+   {
+    \vlde{\Psi'}{}
+    {
+     \gamma
+    }
+    {
+     \vlin{\rho}{}
+     {
+      \alpha'
+     }
+     {
+      \vlde{\Phi'_1}{}
+      {
+       \beta'
+      }
+      {
+       \vlhy
+       {
+        \alpha
+       }
+      }
+     }
+    }
+   }\quad,
   \]
   with size $\size{\Phi'_1}+\size{\Psi'}=\size{\Phi'_1}+\size{\Phi''_1}+\size{\Phi_2}-\size{\beta}=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$;
 
  \item if
   \[
    \Phi_2\;=\;
-   \vlinf{\rho}{}{\vlder{\Phi''_2}{}{\gamma}{\beta'}}{\vlder{\Phi'_2}{}{\gamma'}{\beta}}\quad,
+   \vlderivation
+   {
+    \vlde{\Phi''_2}{}
+    {
+     \gamma
+    }
+    {
+     \vlin{\rho}{}
+     {
+      \beta'
+     }
+     {
+      \vlde{\Phi'_2}{}
+      {
+       \gamma'
+      }
+      {
+       \vlhy
+       {
+        \beta
+       }
+      }
+     }
+    }
+   }\quad,
   \]
   then, by the inductive hypothesis, we can construct $\vlder{\Psi'}{}{\gamma'}{\alpha}$, with size $\size{\Phi_1}+\size{\Phi'_2}-\size{\beta}$, we can then build
   \[
    \Psi\;=\;
-   \vlinf{\rho}{}{\vlder{\Phi''_2}{}{\gamma}{\beta'}}{\vlder{\Psi'}{}{\gamma'}{\alpha}}\quad,
+   \vlderivation
+   {
+    \vlde{\Phi''_2}{}
+    {
+     \gamma
+    }
+    {
+     \vlin{\rho}{}
+     {
+      \beta'
+     }
+     {
+      \vlde{\Psi'}{}
+      {
+       \gamma'
+      }
+      {
+       \vlhy
+       {
+        \alpha
+       }
+      }
+     }
+    }
+   }\quad,
   \]
   with size $\size{\Psi'}+\size{\Phi''_2}=\size{\Phi_1}+\size{\Phi'_2}+\size{\Phi''_2}-\size{\beta}=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$;
 
@@ -252,7 +358,18 @@ then, by the inductive hypothesis, we can construct
  \[
   \vlder{\Psi_1}{}{\gamma_1}{\alpha_1}\quad,\cdots,\quad\vlder{\Psi_n}{}{\gamma_n}{\alpha_n}\quad,
  \]
-with size $\size{\Phi_{1,1}}+\size{\Phi_{2,1}}-\size{\beta_1},\dots,\size{\Phi_{1,n}}+\size{\Phi_{2,n}}-\size{\beta_n}$, respectively, we can then build $\Psi=\circ(\Psi_1,\dots,\Psi_n)$, with size $\size{\Psi_1}+\cdots+\size{\Psi_n}=\size{\Phi_{1,1}}+\cdots+\size{\Phi_{1,n}}+\size{\Phi_{2,1}}+\cdots+\size{\Phi_{2,n}}-(\size{\beta_1}+\cdots+\size{\beta_n})=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$.
+with size $\size{\Phi_{1,1}}+\size{\Phi_{2,1}}-\size{\beta_1},\dots,\size{\Phi_{1,n}}+\size{\Phi_{2,n}}-\size{\beta_n}$, respectively, we can then build
+\[
+\Psi\;=\;
+\circ
+\left(
+ \vlder{\Psi_1}{}{\gamma_1}{\alpha_1}
+ \;,\;\dots\;,\;
+ \vlder{\Psi_n}{}{\gamma_n}{\alpha_n}
+\right)
+\quad,
+\]
+with size $\size{\Psi_1}+\cdots+\size{\Psi_n}=\size{\Phi_{1,1}}+\cdots+\size{\Phi_{1,n}}+\size{\Phi_{2,1}}+\cdots+\size{\Phi_{2,n}}-(\size{\beta_1}+\cdots+\size{\beta_n})=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$.
 
 \end{enumerate}
 \end{proof}
@@ -277,36 +394,36 @@ Given derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma
 
 
 \begin{definition}\label{definition:CoS}
-A \emph{calculus of structures derivation} $\vlder{\Psi}{}{\beta}{\alpha}$ from (the formula) $\alpha$ to (the formula) $\beta$, is defined to be
+Given a set of formulae and a proof system $\mathcal{S}$, then a \emph{calculus of structures derivation} $\vlder{\Psi}{}{\beta}{\alpha}$ from the formula $\alpha$ to the formula $\beta$, is defined to be
 \begin{enumerate}
- \item\label{definition:CoS:item:Formula} a formula: $\Psi=\alpha=\beta$; and
+ \item\label{definition:CoS:item:Formula} a formula: $\alpha\equiv\beta$; or
 
  \item\label{definition:CoS:item:Vertical} the result of a vertical composition:
  \[
- \Psi\;=\;
  \vlinf{\rho}{}
  {
   \vlder{\Phi_2}{}
   {
-   \beta_2
+   \beta
   }
   {
-   \xi\{\alpha_2\}
+   \xi\{\alpha'\}
   }
  }
  {
   \vlder{\Phi_1}{}
   {
-   \xi\{\beta_1\}
+   \xi\{\beta'\}
   }
   {
-   \alpha_1
+   \alpha
   }
  }
  \quad,
  \]
- where $\vlinf{\rho}{}{\beta_2}{\alpha_1}$ is an inference rule instance, and $\vlder{\Phi_1}{}{\xi\{\beta_1\}}{\alpha_1}$ and $\vlder{\Phi_2}{}{\beta_2}{\xi\{\alpha_2\}}$ are calculus of structures derivations; we define $\size{\Psi}$ to be $\size{\Phi_1}+\size{\Phi_2}$.
+ where $\vlinf{\rho}{}{\beta'}{\alpha'}$ is an instance of an inference rule from $\mathcal{S}$, and $\vlder{\Phi_1}{}{\xi\{\beta'\}}{\alpha}$ and $\vlder{\Phi_2}{}{\beta}{\xi\{\alpha'\}}$ are calculus of structures derivations.
 \end{enumerate}
+The size of a calculus of structures derivation $\Psi$, denoted $\size{\Psi}$, is defined to be the sum of the size of the formulae occurring in $\Psi$.
 \end{definition}
 
 \begin{theorem}
