--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -1,8 +1,8 @@
 \chapter{Propositional Classical Logic}
 
 %---------------------------------------
-\begin{definition}\label{definition:RuleInstance}
-\emph{Formulae}, $\alpha$, $\beta$, $\gamma$, $\delta$ are freely built from: \emph{units}, $\fff$ (false), $\ttt$ (true); \emph{atoms}, $a$, $b$, $c$, $d$, $e$; \emph{disjunction} and \emph{conjunction}, ${\vlsbr[\alpha.\beta]}$ and $\vlsbr(\alpha.\beta)$. On the set of atoms a (non-identical) involution $\bar\cdot$ is defined, and dual atom occurrences, as $a$ and $\bar a$, can appear in formulae. We denote \emph{contexts}, \emph{i.e.}, formulae with a hole, by $\xi\vlhole$ and $\zeta\vlhole$.
+\begin{definition}\label{definition:PropositionalFormulae}
+We define (\emph{propositional}) \emph{formulae} to be formulae built from the units $\ttt$ (true) and $\fff$ (false), and the binary logical relations \emph{disjunction} and \emph{conjunction}, $\vls[\alpha.\beta]$ and $\vls(\alpha.\beta)$.
 \end{definition}
 
 %---------------------------------------
