--- a/flows.tex
+++ b/flows.tex
@@ -306,13 +306,15 @@ Given two atomic flows $\phi$ and $\psi$, such that
   \item $\epsilon$, $\epsilon_1$, $\dots$, $\epsilon_m$ are the upper (resp., lower) edges of $\phi$, and
   \item $\epsilon'$ is an upper (resp., lower) edge of $\psi$,
 \end{itemize}
-then we say that \emph{$\epsilon$ corresponds to $\epsilon'$} if, for every $1\le i\le n$,
+then we say that \emph{$\epsilon$ corresponds to $\epsilon'$} if
 \begin{itemize}
-  \item there is a path from $\epsilon'$ to $f_i(\epsilon)$, and
-  \item for every $1\le j \le m$, there is no path form $\epsilon'$ to $f_i(\epsilon_j)$.
+  \item for some $1\le i\le n$, there is a path from $\epsilon'$ to $f_i(\epsilon)$, and
+  \item for every $1\le i\le n$ and every $1\le j \le m$, there is no path form $\epsilon'$ to $f_i(\epsilon_j)$.
 \end{itemize}
 Whenever we give the same name, $\epsilon$, to two edges in different atomic flows, $\phi$ and $\psi$ we mean that $\epsilon$ in $\psi$ corresponds to $\epsilon$ in $\phi$.
 \end{definition}
+
+\TODO{As is now, $\epsilon$ can correspond to more than one edge. Remove comment or change def.}
 
 \begin{remark}
 If $\epsilon$ in $\phi$ corresponds to $\epsilon'$ in $\psi$ it is not a problem to refer to them by the same name since they belong to different atomic flows and since $\epsilon$ can at most correspond to one edge in $\psi$.
