--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -2,15 +2,13 @@
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
-\TODO{Define atomic flows to always be considered modulo isomorphism.}
+\TODO{Note: removed "modulo isomorphism" since this is already taken care of in the definitions earlier on.}
 
-\TODO{Redo the following proposition once the definition of Formalism A is set in stone.}
-
-\TODO{Does it look better with or without the names of structural rules...?}
+\TODO{Rephrase item 2 (first decide finally on Functorial calculus definition.}
 
 %---------------------------------------
 \begin{proposition}\label{proposition:FlowUnique}
-Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ (modulo isomorphisms) such that:
+Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such that:
 \begin{enumerate}
 %-------------------
 \item there is a surjective map between the set of atom occurrences of\/ $\Phi$ and the set of edges of $\phi$;
@@ -83,8 +81,6 @@ Every atomic flow is associated with some derivation.
 \end{theorem}
 
 \TODO{Show the first two derivations first with only their premiss/conclusion in the following proof, to make it more clear what we are trying to do.}
-
-\TODO{Reintroduce super switch.}
 
 \TODO{Decide on a convention of when to put the name of the derivation on the `stem' and when to say that the name equals the derivation.}
 
@@ -214,6 +210,8 @@ whose flow is $\phi$.
 \end{proof}
 
 \section{Size}\label{section:FlowSize}
+
+\TODO{Keep this? Prove it...?}
 
 \begin{theorem}\label{theorem:FlowSize}
 Given a derivation $\Phi$ with associated flow $\phi$, $|\Phi|\leq|\phi|^3$.
